--- a/index.html
+++ b/index.html
@@ -30,6 +30,14 @@
         These are some of my projects
       </div>
     </div>
+    <div class="main bg-gray-800 py-80 pl-9">
+      <div class="text-6xl flex justify-center text-white">
+        Let's work together...
+      </div>
+      <div class="text-1xl flex py-4 justify-center text-white">
+        How do you take coffee?
+      </div>
+    </div>
   </main>
 </body>
 </html>
